# haskell-multibase

./: .gitignore  .travis.yml  Multibase.cabal  README.md  multibase.cabal  stack.yaml  test1.csv  test2.csv  test3.csv  test4.csv  test5.csv
bench/: Main.hs
src/: Multibase.hs  MultibaseEncode.hs
src/Data/ByteString/: Multibase.hs
src/Data/ByteString/Multibase/: Encode.hs
test/: Test.hs
