name:                multibase
version:             2.1
synopsis:            An implementation in haskell of the multibase protocol
description:  This library can be built with cabal and contains functions to base encode and decode byteStrings to and from multibase representation (part of the multiformats project, by protocol labs https://protocol.ai/ ).
                 A multibase is a short prefix that allows to identify the base encoding of a byteString , the format is : <multibase-prefix><encoded byteString>
                 byteStrings used are from https://hackage.haskell.org/package/bytestring-0.10.8.2/docs/Data-ByteString.html .
homepage:            https://github.com/multiformats/haskell-multibase
license:             MIT
license-file:        LICENSE
author:              Unlambder
maintainer:          31901933+Unlambder@users.noreply.github.com

-- A copyright notice.
-- copyright:

category:            Codec
build-type:          Simple
extra-source-files:  ChangeLog.md
cabal-version:       >=1.10


library
  default-language:    Haskell2010
  exposed-modules:     Data.ByteString.Multibase
                     , Data.ByteString.Base32
                     , Data.ByteString.Base32.Hex
                     , Data.ByteString.Base32.Z
  other-modules:       Data.ByteString.Base32.Internal
                     , Data.ByteString.Multibase.Encode

  -- LANGUAGE extensions used by modules in this package.
  -- other-extensions:
  build-depends:       base >=4.10 && <4.11
                     , base16-bytestring
                     , base58-bytestring >=0.1 && <0.2
                     , base64-bytestring
                     , bytestring >=0.10 && <0.11
                     , containers >=0.5 && <0.6
                     , cpu >=0.1.2 && <0.2
                     , deepseq
  hs-source-dirs:      src

test-suite multibase-test
  type: exitcode-stdio-1.0
  hs-source-dirs: test
  main-is: Test.hs
  default-language:    Haskell2010
  build-depends:       base
                     , bytestring
                     , hspec
                     , multibase
                     , QuickCheck

benchmark bench
  type:                exitcode-stdio-1.0
  default-language:    Haskell2010
  hs-source-dirs:      bench
  main-is:             Main.hs
  build-depends:       base >= 4.10 && <4.11
                     , bytestring
                     , criterion
                     , multibase
  ghc-options:         -O2 -Wall -fno-warn-orphans